# benchmark-hs

./: README.md  benchmark.cabal  package.json  rebuild.sh
jsbits/: benchmark-out.js  benchmark-wrapper.js
src/Web/: Benchmark.hs
test/: Main.hs
