name:                benchmark
version:             0.1.0.0
synopsis:            benchmark.js bindings for GHCJS
-- description:         Virtual-dom is a library for fast incremental DOM
--                      updates by comparing virtual immutable DOM trees to
--                      find a minimal number of changes to update the actual DOM.

license:             MIT
license-file:        LICENSE
author:              Hans Hoglund
maintainer:          hans@hanshoglund.se
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  jsbits/benchmark-wrapper.js

library
  js-sources:          jsbits/benchmark-out.js
  ghcjs-options:       -Wall
  exposed-modules:     Web.Benchmark
  build-depends:       base >=4.7 && < 5,
                       ghc-prim,
                       -- ghcjs-ffiqq,
                       ghcjs-base >= 0.2.0.0,
                       ghcjs-prim,
                       deepseq,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010


executable benchmark-test
  Main-Is:             Main.hs
  Default-Language:    Haskell2010
  hs-source-dirs:      test
  Build-Depends:       base                >= 4    &&  < 5,
                       -- ghcjs-ffiqq,
                       benchmark,
                       containers,
                      --  deepseq,
                       ghcjs-base
  ghcjs-Options:       -Wall
